@startuml
skinparam classAttributeIconSize 0

package "Domain" {
  class Movie {
    -id: string
    -title: string
    -genre: string
    -durationMinutes: int
  }

  class Hall {
    -id: string
    -name: string
    -rows: int
    -seatsPerRow: int
    +contains(seat): bool
  }

  class Session {
    -id: string
    -movieId: string
    -hallId: string
    -startAt: string
    -basePrice: double
    +reserveSeat(seat)
    +markSeatAsSold(seat)
    +occupancyRate(): double
  }

  class Reservation {
    -id: string
    -sessionId: string
    -seat: Seat
    -customerName: string
    -finalPrice: double
    -status: ReservationStatus
  }

  class Ticket {
    -id: string
    -reservationId: string
    -sessionId: string
    -paidAmount: double
  }

  class Seat

  interface IMovieRepository
  interface IHallRepository
  interface ISessionRepository
  interface IReservationRepository
  interface ITicketRepository

  interface IPricingStrategy {
    +calculatePrice(...): double
  }

  class DynamicPricingStrategy
  DynamicPricingStrategy ..|> IPricingStrategy
}

package "Application" {
  class CinemaService
  class QueryService
}

package "Infrastructure" {
  class FileMovieRepository
  class FileHallRepository
  class FileSessionRepository
  class FileReservationRepository
  class FileTicketRepository
  class RepositoryFactory
}

CinemaService --> IMovieRepository
CinemaService --> IHallRepository
CinemaService --> ISessionRepository
CinemaService --> IReservationRepository
CinemaService --> ITicketRepository
CinemaService --> IPricingStrategy

QueryService --> IMovieRepository
QueryService --> ISessionRepository
QueryService --> ITicketRepository

FileMovieRepository ..|> IMovieRepository
FileHallRepository ..|> IHallRepository
FileSessionRepository ..|> ISessionRepository
FileReservationRepository ..|> IReservationRepository
FileTicketRepository ..|> ITicketRepository

Session --> Movie
Session --> Hall
Reservation --> Session
Ticket --> Reservation

@enduml